# gmidimonitor

./: .gitignore  AUTHORS  COPYING.icon  GNUmakefile  INSTALL  Makefile.am  NEWS  README  about.c  acinclude.m4  alsa.c  alsa.h  bootstrap  common.h  config.h.in  configure.ac  glade.c  glade.h  gm.c  gm.h  gmidimonitor-alsa.desktop  gmidimonitor-jack.desktop  gmidimonitor.glade  gmidimonitor.gladep  gmidimonitor.ui  jack.c  jack.h  jack_compat.c  jack_compat.h  log.c  log.h  main.c  memory_atomic.c  memory_atomic.h  meson.build  meson_options.txt  path.c  path.h  sysex.c  sysex.h  (+2 more)
trunk/: GNUmakefile  INSTALL  about.c  glade.c  glade.h  gmidimonitor.glade  main.c  path.c  path.h
